# midilooper

./: .gitmodules  CMakeLists.txt  MANIFEST.in  Makefile  README  README.md  dev_midilooper.sh  make_deb.sh  minilib.py  mlp_prepare.sh  prepare_deb.sh  run_midilooper.sh  setup.py  test.py  test_midilooper.sh
.github/workflows/: cmake.yml
C/: Makefile
C/asound/: aseq.c  aseq.h
C/beta_engine/: engine.c  engine.h
C/clock/: clock.c  clock.h
C/debug_tool/: debug_tool.c  debug_tool.h
C/loop_engine/: engine.c  engine.h  engine_midisave.c
C/midi/: midi_channel_ev.c  midi_meta_ev.c  midi_tool.c  midiev.h  midiev_tool.c  midifile.c  midifile.h  midifile_tool.c
C/seqtool/: seqtool.c  seqtool.h
C/test/: launch_test.sh  test_engine.c  test_list  test_list.c
C/tool/: compilation_config.h  tool.c  tool.h  tool_thread.h
c_api/: Makefile  Rules.mk
c_api/asound/: aseq.c  aseq.h  aseq_tool.c  aseq_tool.h
c_api/clock/: clock.c  clock.h
c_api/debug_tool/: debug_tool.h  dump_trackst.c
c_api/loop_engine/: engine.c  engine.h  engine_midisave.c  ev_iterator.c  ev_iterator.h  track_ctx.c
c_api/midi/: midi_channel_ev.c  midi_meta_ev.c  midiev.h  midiev_inc.h  midifile.c  midifile.h  midifile_get_varlen.c  midifile_tool.c
c_api/seqtool/: seqtool.c  seqtool.h
c_api/tool/: compilation_config.h  tool.c  tool.h
lib/: Rules.mk
lib/asound/: aseq_tool.h
lib/jack/: jack_backend.c
lib/loop_engine/: engine.c  engine.h  engine_binding.c  engine_jack.c  engine_midisave.c
lib/midi/: midi_tool.c  midi_tool.h  midiev.h  midiev_inc.h  midifile.c  midifile.h  midifile_tool.c
lib/seqtool/: ev_iterator.c
lib_midiseq/: Rules.mk
lib_midiseq/asound/: aseq.c  aseq.h  aseq_tool.c  aseq_tool.h
lib_midiseq/clock/: clock.c  clock.h
lib_midiseq/debug_tool/: debug_tool.c  debug_tool.h  dump_trackst.c
lib_midiseq/jack/: jack_backend.c  jack_backend.h
lib_midiseq/loop_engine/: engine.c  engine.h  engine_binding.c  engine_jack.c  engine_midisave.c  engine_nanosleep.c  ev_iterator.c  ev_iterator.h  output_req.c  track_ctx.c  track_req.c
lib_midiseq/midi/: midi_channel_ev.c  midi_meta_ev.c  midi_tool.c  midi_tool.h  midiev_inc.h  midifile.c  midifile_set_varlen.c  midifile_tool.c
lib_midiseq/seqtool/: seqtool.h
lib_midiseq/tool/: compilation_config.h  tool.c  tool.h  tool_thread.h
midilooper/: Makefile  midilooper.py  outputlist.py  player.py  portlist.py  tool.py  track_editor.py  tracklist.py  widget.py
midilooper/module/: Makefile  engine.c  engine.h  engine_midisave.c  pym_midiseq.c  pym_midiseq.h  pym_midiseq_aport.c  pym_midiseq_aport.h  pym_midiseq_class.c  pym_midiseq_evwr.c  pym_midiseq_evwr.h  pym_midiseq_file.c  pym_midiseq_file.h  pym_midiseq_tools.c  pym_midiseq_tools.h  pym_midiseq_track.c  pym_midiseq_track.h  setup.py
midilooper/msqwidget/: __init__.py  midivaluewgt.py  notegridevt.py  notegridwgt.py  wgttools.py
midilooper/pygtk/: midilooper.py  portlist.py  track_editor.py  tracklist.py  widget.py
midilooper/widget/: __init__.py  notegridwgt.py
python/: Makefile  midilooper.py  player.py  pym_midiseq.c  pym_midiseq.h  pym_midiseq_file.c  pym_midiseq_track.c  setup.py  tool.py  track_editor.py  tracklist.py  widget.py
python/module/: Makefile  engine.c  engine.h  pym_midiseq.c  pym_midiseq.h  pym_midiseq_aport.c  pym_midiseq_class.c  pym_midiseq_evwr.c  pym_midiseq_evwr.h  pym_midiseq_file.c  pym_midiseq_tickevwr.c  pym_midiseq_tickevwr.h  pym_midiseq_track.c  pym_midiseq_track.h  setup.py
python/msqgtk/: midilooper.py  player.py  portlist.py  test_tv.py  tool.py  track_editor.py  tracklist.py  widget.py
python/msqwidget/: __init__.py  midivaluewgt.py  notegridevt.py  wgttools.py
python_midiseq/: Rules.mk  pym_midiseq.c  pym_midiseq.h  pym_midiseq_aport.c  pym_midiseq_aport.h  pym_midiseq_class.c  pym_midiseq_evwr.c  pym_midiseq_evwr.h  pym_midiseq_output.c  pym_midiseq_tools.c  pym_midiseq_tools.h  pym_midiseq_track.c  pym_midiseq_track.h  setup.py
python_module/: Rules.mk  pym_midiseq_class.c  pym_midiseq_file.c  pym_midiseq_tools.c  pym_midiseq_tools.h  pym_midiseq_track.c
src/: MANIFEST.in  copyright  dump_version_header.sh  gen_debchangelog.sh  gen_version.sh  midilooper.1  midilooper_dev.sh  midiseq.mk  midiseq_ext_dev.mk  setup.py  stdeb.cfg  update_debchangelog.sh
src/debian/: changelog.in  control  midilooper.install  midilooper.manpages  rules  watch
src/debian.in/: control  rules
src/debian_pkg/: changelog
src/debian_pkg/debian_buster/: control  midilooper.manpages
src/midilooper/: __init__.py  msq_gui.c  msq_gui.h  msq_gui_inc.h  msq_imgui.cxx  msq_imgui.hxx  msq_main_gui.cxx  msq_nsm.c  msq_nsm.h  msq_nsm_inc.h  msq_track_editor.c  msq_track_editor.h  msq_track_editor_inc.h  outputlist.py  tool.py  tools.py  track_editor.py  tracklist.py
src/midilooper/msqwidget/: __init__.py  midivaluewgt.py  notegridevt.py  wgttools.py
src/midilooper/scripts/: midilooper
src/midiseq/asound/: aseq.c  aseq.h  aseq_tool.c  aseq_tool.h
src/midiseq/clock/: clock.c  clock.h
src/midiseq_ext/: pym_midiseq.c  pym_midiseq.h  pym_midiseq_class.c  pym_midiseq_evwr.c  pym_midiseq_evwr.h  pym_midiseq_file.c  pym_midiseq_file.h  pym_midiseq_output.c  pym_midiseq_output.h  pym_midiseq_tools.c  pym_midiseq_tools.h  pym_midiseq_track.c  pym_midiseq_track.h
src/pixel_buffer_tools/: CMakeLists.txt
src/pixel_buffer_tools/src/: pbt_cursor_inc.h  pbt_draw.c  pbt_draw.h  pbt_draw_font.c  pbt_event_handler.c  pbt_event_handler.h  pbt_event_handler_inc.h  pbt_font.c  pbt_font.h  pbt_font_inc.h  pbt_gadget.c  pbt_gadget.h  pbt_gadget_inc.h  pbt_gadget_window.c  pbt_gadget_window.h  pbt_gadget_window_inc.h  pbt_pixel_buffer.c  pbt_pixel_buffer.h  pbt_pixel_buffer_inc.h  pbt_tools.c  pbt_tools.h  pbt_type.h  pbt_window_gadget.c  pbt_window_gadget.h  pbt_window_gadget_inc.h  wbe_gl.c  wbe_gl.h  wbe_glfw.c  wbe_glfw.h  wbe_glfw_inc.h  wbe_pbw.c  wbe_pbw.h  wbe_pbw_inc.h  wbe_type.h
src/pixel_buffer_tools/src/data_tools/: dump_gtk_cursor_array.py  gen_archive_src.sh
src/pixel_buffer_tools/src/test/: CMakeLists.txt  test_pbt.c
(+33 files in other folders)
